Added example apps and updated storyboard. Added TheSideBarController to podfile and example project.

--- a/GDRouting-Example/Podfile
+++ b/GDRouting-Example/Podfile
@@ -7,3 +7,4 @@ link_with ['GDRouting-Example', 'GDRouting-ExampleTests']
 pod 'DProperty'
 pod 'JLRoutes'
 pod 'FastCoding'
+pod 'TheSidebarController'
